# twitter_feelings

./: README.md  output_file.csv  pyproject.toml
archive/: negative-words-translated.txt  negative-words-utf8.txt  positive-words-translated.txt  positive-words-utf8.txt
twitter_feelings/: preprocessing.py  processing.py  spanish_dictionaries.py
twitter_feelings/csv/: cleaned.csv
