[tool.poetry]
name = "twitter-feelings"
version = "0.1.0"
description = ""
authors = ["jorge <jorgealonsovasquez@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
spacy = "^3.7.6"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
